:rocket: overflow hidden and blob fixes with hero section ipad version

--- a/styles/pages/landing/identt/_identt.scss
+++ b/styles/pages/landing/identt/_identt.scss
@@ -1,5 +1,5 @@
 .identt_main {
-
+    overflow-x: hidden;
 
 
 
